--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ margin-left: 0px;
         <div class="top-main">
             <div class="container ">
                 <h1>Explore the Power of</br> <span style="color: #f8981d;">Development</span> From Anywhere</h1>
-                <center><img class="image-responsive" src="assest/img/mysqlmid.svg"></center>
+                <center><img class="image-responsive" src="assets/img/user/mysqlmid.svg"></center>
                 <div class="row justify-content-center">
                     <div class="col-md-2">
                         <div class="card">
@@ -291,7 +291,7 @@ margin-left: 0px;
                     </div> 
                     <div class="col-md-6 how_right" >
                         <div class="container">
-                            <center><img src="assest/img/phpmyadmin.svg"></center>
+                            <center><img src="assets/img/user/phpmyadmin.svg"></center>
                         </div>
                     </div>  
              </div>
